--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
   "name": "useragentsdata",
-  "version": "1.0.12",
+  "version": "1.0.13",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^0.21.1",
+    "chalk": "^4.1.0",
+    "lodash": "^4.17.20",
+    "minimist": "^1.2.5",
+    "useragent": "^2.3.0"
+  }
 }
